# clouds

./: README.md  makefile  pyproject.toml  requirements.txt
1/: fio_stats.txt  index.html
1/static/: 404.html  index.html
2/app/: main.py
2/app-flask/: app.py  requirements.txt
2/app-flask/templates/: index.html
2/app/src/: get_integral_approximation.py
2/durable-fns/GetInputData/: __init__.py
2/durable-fns/MapReduceOrchestrator/: __init__.py
2/durable-fns/MapperActivity/: __init__.py
2/durable-fns/ReducerActivity/: __init__.py
2/durable-fns/ShufflerActivity/: __init__.py  function.json
2/fns-app/api/clouds-fn/: __init__.py
2/results/: app-old-parsed.csv  app-old.csv  app-parsed.csv  app.csv  functions-parsed.csv  functions.csv  local-parsed.csv  local.csv  scaleset-parsed.csv  scaleset.csv
2/test-results/: report_1669165989.7603211.html  requests_1669165938.921261.csv
2/vm-fastapi/: locustfile.py  main.py
